Fixed search bar on smaller screen and adjusted side menu icons

--- a/style.css
+++ b/style.css
@@ -72,58 +72,15 @@ nav {
 }
 /* NAVBAR ENDS HERE */
 
-/* SIDE MENU STARTS HERE */
-.side-menu {
-    min-width: 100%;
-    min-height: 100%;
-    background-color: #1D2123;
-    position: absolute;
-    left: 0;
-    display: none;
-}
+/* SIDE MENU STARTS HERE  */
 
-.side-menu li {
-    list-style: none;
-    margin-top: 50px;
-}
 
-.side-menu a {
-    text-decoration: none;
-    position: absolute;
-    left: 100px;
-    margin-top: 5px;
-}
+/* SIDE MENU ENDS HERE  */
 
-.home-logo {
-    margin-bottom: -15.5px;
-    margin-left: -15.5px;
-}
 
-.home-link {
-    margin-top: 20px !important;
-}
-
-.collection-logo-first-half {
-    margin-bottom: 17.5px;
-    margin-right: -25px;
-}
-
-.radio-logo-first-half {
-    margin-bottom: 20px;
-    margin-right: -10px;
-}
-
-.profile-logo-first-half {
-    margin-bottom: 13.5px;
-    margin-right: -20px;
-}
-
-.display-side-menu {
-    display: inherit;   
-}
-/* SIDE MENU ENDS HERE */
 
 @media (max-width: 480px) {
+
     /* NAVBAR STARTS HERE */
     .toggle-btn-container {
         display: inherit;
@@ -139,6 +96,7 @@ nav {
         min-width: 100%;
         position: absolute;
         left: 0;
+        border: none;
         border-radius: 0;
         display: none;
     }
@@ -146,5 +104,56 @@ nav {
     .display-search-bar {
         display: inherit;
     }
-     /* NAVBAR ENDS HERE */
+
+    /* NAVBAR ENDS HERE */
+
+    /* SIDE MENU STARTS HERE */
+    .side-menu {
+        min-width: 100%;
+        min-height: 100%;
+        background-color: #1D2123;
+        position: absolute;
+        left: 0;
+        display: none;
+    }
+
+    .side-menu li {
+        list-style: none;
+        margin-top: 50px;
+    }
+
+    .side-menu a {
+        text-decoration: none;
+        position: absolute;
+        left: 100px;
+        margin-top: -20px;
+    }
+
+    .home-icon {
+        margin-bottom: -15.5px;
+        margin-left: -15.5px;
+    }
+
+    .collection-icon-first-half {
+        margin-bottom: 17.5px;
+        margin-right: -25.7px;
+    }
+
+    .radio-icon-first-half {
+        margin-bottom: 19.5px;
+        margin-right: -12px;
+    }
+
+    .profile-icon-first-half {
+        margin-bottom: 13.5px;
+        margin-right: -20.5px;
+    }
+
+    .display-side-menu {
+        display: inherit;
+    }
+
+    /* SIDE MENU ENDS HERE */
+
+
 }
